--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 	<h1>"We are only limited by our own imagination."</h1>
       <canvas id="canvas">Canvas from: https://codepen.io/prajotsurey/pen/abMZedG</canvas>
     </div>
-    <script src="./script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
