change redirect location to github profile

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="5;url=https://en.wikipedia.org/wiki/Meaning_of_life">
+    <meta http-equiv="refresh" content="5;url=https://github.com/azizp128">
     <title>azizprabowo.social</title>
     <style>
       body {
