--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us" class="m-auto dark">
   <head>
-    <title>mysite</title>
+    <title>azizprabowo.social</title>
 
     <meta name="theme-color" content="" />
     <meta charset="utf-8" />
