--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us" class="m-auto dark">
   <head>
-    <title>azizprabowo.social</title>
+    <title>home</title>
 
     <meta name="theme-color" content="" />
     <meta charset="utf-8" />
@@ -226,7 +226,7 @@
                 <h4>
                   <a href="https://github.com/azizp128/CTF-exploits">CTF Exploits</a>
                 </h4>
-                <p class="markdownify indent-8">List of all the CTFs exploit and solver that I wrote for fun</p>
+                <p class="markdownify indent-8">List of all the CTFs exploit and solver that I wrote for fun.</p>
 
                 <h4>
                   <a href="https://github.com/azizp128/prediksi-emosi-indobert">Prediksi Emosi IndoBERT</a>
@@ -236,7 +236,7 @@
                 <h4>
                   <a href="https://github.com/azizp128/analisis-sentimen-bahasa-jawa-indobert">Analisis Sentimen Bahasa Jawa IndoBERT</a>
                 </h4>
-                <p class="markdownify indent-8">Model analisis sentimen berbasis IndoBERT yang dapat memprediksi sentimen dalam teks berbahasa Jawa Ngoko Lugu</p>
+                <p class="markdownify indent-8">Model analisis sentimen berbasis IndoBERT yang dapat memprediksi sentimen dalam teks berbahasa Jawa Ngoko Lugu.</p>
 
                 <h4>
                   <a href="https://github.com/azizp128/Income-Prediction-Flask">Income Prediction</a>
