add gh link for titanic prediction project

--- a/home.html
+++ b/home.html
@@ -244,14 +244,10 @@
                 <p class="markdownify indent-8">A web-based app Machine Learning model that utilizes the AdaBoost algorithm to predict income based on various attributes such as age, workclass, education, marital status, and more. By training on a dataset containing these features, the model can classify individuals into different income categories.</p>
 
                 <h4>
-                    <a href="">Titanic Survival Prediction</a>
+                    <a href="https://github.com/azizp128/Titanic-Survival-Prediction-Django">Titanic Survival Prediction</a>
                   </h4>
                   <p class="markdownify indent-8">A web-based app Machine Learning model that utilizes Logistic Regression to predict the survival of passengers aboard the Titanic. The model is trained on a dataset consisting of various passenger attributes such as age, gender, ticket class, and more. By analyzing these features, the model can make predictions on whether a passenger would have survived or not.</p>
                   
-                <h4>
-                    <a href=""></a>
-                </h4>
-                <p class="markdownify indent-8"></p>
               </div>
             </div>
           </div>
