--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us" class="m-auto dark">
   <head>
-    <title>home</title>
+    <title>Home</title>
 
     <meta name="theme-color" content="" />
     <meta charset="utf-8" />
@@ -79,7 +79,11 @@
           href="/home.html"
           >Home</a
         >
-        <!-- <a class="no-underline p-2 rounded hover:bg-gray-200 dark:hover:bg-gray-800" href="/blog">Blog</a> -->
+        <a
+          class="no-underline p-2 rounded hover:bg-gray-200 dark:hover:bg-gray-800"
+          href="/blog.html"
+          >Blog</a
+        >
       </div>
 
       <i
@@ -124,7 +128,10 @@
                 <h1 class="mb-0">Aziz Prabowo</h1>
                 <div class="mb-4 flex flex-wrap justify-center">
                   <div class="mx-2">
-                    <a class="text-2xl" href="https://linkedin.com/in/aziz-prabowo/">
+                    <a
+                      class="text-2xl"
+                      href="https://linkedin.com/in/aziz-prabowo/"
+                    >
                       <i class="mt-1 fab fa-linkedin-in"></i>
                     </a>
                   </div>
@@ -136,26 +143,23 @@
                   </div>
 
                   <div class="mx-2">
-                    <a class="text-2xl" href="https://twitter.com/satemonyet86/">
+                    <a
+                      class="text-2xl"
+                      href="https://twitter.com/satemonyet86/"
+                    >
                       <i class="mt-1 fab fa-twitter"></i>
                     </a>
                   </div>
 
                   <div class="mx-2">
-                    <a class="text-2xl" href="https://www.instagram.com/semra.wood/">
+                    <a
+                      class="text-2xl"
+                      href="https://www.instagram.com/semra.wood/"
+                    >
                       <i class="mt-1 fab fa-instagram"></i>
                     </a>
                   </div>
-
                 </div>
-                <footer
-                  class="text-sm text-center border-t border-gray-300 dark:border-gray-700 pt-2"
-                >
-                  <p class="markdownify">
-                    built with <i class="fas fa-solid fa-heart"></i> by <a href="https://showwcase.azizprabowo.social/">me</a> <br>
-                    template by <a href="https://github.com/darshanbaral/aafu">aafu</a>
-                  </p>
-                </footer>
               </div>
             </div>
           </div>
@@ -176,7 +180,7 @@
             <div class="panel overflow-hidden px-2 ml-2">
               <div class="">
                 <p class="markdownify">
-                    A person who loves to do research and experimentation for fun.
+                  A person who loves doing research and experimentation for fun.
                 </p>
               </div>
             </div>
@@ -197,14 +201,18 @@
             <div class="panel overflow-hidden px-2 ml-2">
               <div class="">
                 <h4 style="text-decoration: underline">Journal Articles</h4>
-                <p class="foo indent-8">2024.
-                  <a href="https://e-jurnal.stmikbinsa.ac.id/index.php/simkom/article/view/478">
-                    <em
-                      >Penerapan Metode Transfer Learning Pada Indobert Untuk Analisis Sentimen Teks Bahasa Jawa Ngoko Lugu</em
-                    >
-                  </a>, simkom, vol. 9, no. 2, pp. 205-217, Jul. 2024.
-                </p>
                 <p class="foo indent-8">
+                  2024.
+                  <a
+                    href="https://e-jurnal.stmikbinsa.ac.id/index.php/simkom/article/view/478"
+                  >
+                    <em
+                      >Penerapan Metode Transfer Learning Pada Indobert Untuk
+                      Analisis Sentimen Teks Bahasa Jawa Ngoko Lugu</em
+                    ></a
+                  >, simkom, vol. 9, no. 2, pp. 205-217, Jul. 2024.
+                </p>
+                <p class="foo indent-8"></p>
               </div>
             </div>
           </div>
@@ -224,30 +232,66 @@
             <div class="panel overflow-hidden px-2 ml-2">
               <div class="">
                 <h4>
-                  <a href="https://github.com/azizp128/CTF-exploits">CTF Exploits</a>
+                  <a href="https://github.com/azizp128/CTF-exploits"
+                    >CTF Exploits</a
+                  >
                 </h4>
-                <p class="markdownify indent-8">List of all the CTFs exploit and solver that I wrote for fun.</p>
+                <p class="markdownify indent-8">
+                  List of all the Capture The Flag (CTF) exploits and solvers that I wrote for fun.
+                </p>
 
                 <h4>
-                  <a href="https://github.com/azizp128/prediksi-emosi-indobert">Prediksi Emosi IndoBERT</a>
+                  <a href="https://github.com/azizp128/prediksi-emosi-indobert"
+                    >Prediksi Emosi IndoBERT</a
+                  >
                 </h4>
-                <p class="markdownify indent-8">Prediksi Emosi App adalah sebuah aplikasi yang dapat digunakan untuk memprediksi 6 emosi yang muncul dalam sebuah kalimat, yaitu marah, sedih, senang, cinta, takut, dan jijik.</p>
+                <p class="markdownify indent-8">
+                  Prediksi Emosi App adalah sebuah aplikasi yang dapat digunakan
+                  untuk memprediksi 6 emosi yang muncul dalam sebuah kalimat,
+                  yaitu marah, sedih, senang, cinta, takut, dan jijik.
+                </p>
 
                 <h4>
-                  <a href="https://github.com/azizp128/analisis-sentimen-bahasa-jawa-indobert">Analisis Sentimen Bahasa Jawa IndoBERT</a>
+                  <a
+                    href="https://github.com/azizp128/analisis-sentimen-bahasa-jawa-indobert"
+                    >Analisis Sentimen Bahasa Jawa IndoBERT</a
+                  >
                 </h4>
-                <p class="markdownify indent-8">Model analisis sentimen berbasis IndoBERT yang dapat memprediksi sentimen dalam teks berbahasa Jawa Ngoko Lugu.</p>
+                <p class="markdownify indent-8">
+                  Model analisis sentimen berbasis IndoBERT yang dapat
+                  memprediksi sentimen dalam teks berbahasa Jawa Ngoko Lugu.
+                </p>
 
                 <h4>
-                  <a href="https://github.com/azizp128/Income-Prediction-Flask">Income Prediction</a>
+                  <a href="https://github.com/azizp128/Income-Prediction-Flask"
+                    >Income Prediction</a
+                  >
                 </h4>
-                <p class="markdownify indent-8">A web-based app Machine Learning model that utilizes the AdaBoost algorithm to predict income based on various attributes such as age, workclass, education, marital status, and more. By training on a dataset containing these features, the model can classify individuals into different income categories.</p>
+                <p class="markdownify indent-8">
+                  A web-based app that utilizes the
+                  AdaBoost machine learning algorithm to predict income based on various
+                  attributes such as age, workclass, education, marital status,
+                  and more. By training on a dataset containing these features,
+                  the model can classify individuals into different income
+                  categories.
+                </p>
 
                 <h4>
-                    <a href="https://github.com/azizp128/Titanic-Survival-Prediction-Django">Titanic Survival Prediction</a>
-                  </h4>
-                  <p class="markdownify indent-8">A web-based app Machine Learning model that utilizes Logistic Regression to predict the survival of passengers aboard the Titanic. The model is trained on a dataset consisting of various passenger attributes such as age, gender, ticket class, and more. By analyzing these features, the model can make predictions on whether a passenger would have survived or not.</p>
-                  
+                  <a
+                    href="https://github.com/azizp128/Titanic-Survival-Prediction-Django"
+                    >Titanic Survival Prediction</a
+                  >
+                </h4>
+                <p class="markdownify indent-8">
+                  A web-based app that utilizes the 
+                  Logistic Regression machine learning 
+                  algorithm to predict the survival of passengers aboard the
+                  Titanic. The model is trained on a dataset consisting of
+                  various passenger attributes such as age, gender, ticket
+                  class, and more. By analyzing these features, the model can
+                  make predictions on whether a passenger would have survived or
+                  not.
+                </p>
               </div>
             </div>
           </div>
@@ -267,19 +311,42 @@
             <div class="panel overflow-hidden px-2 ml-2">
               <div class="">
                 <h4>
-                  <a href="https://github.com/azizp128/Responsive-Layouts-Final-Challenge">Responsive Layouts Final Challenge</a>
+                  <a
+                    href="https://github.com/azizp128/Responsive-Layouts-Final-Challenge"
+                    >Responsive Layouts Final Challenge</a
+                  >
                 </h4>
-                <p class="markdownify indent-8">This is a solution to the Responsive Layouts Final Challenge on Kevin Powell Conquering Responsive Layouts Course.</p>
+                <p class="markdownify indent-8">
+                  This is a solution to the Responsive Layouts Final Challenge
+                  on Kevin Powell Conquering Responsive Layouts Course.
+                </p>
 
                 <h4>
-                  <a href="https://www.frontendmentor.io/profile/azizp128/solutions">Frontend Mentor Web Development Challenges</a>
+                  <a
+                    href="https://www.frontendmentor.io/profile/azizp128/solutions"
+                    >Frontend Mentor Web Development Challenges</a
+                  >
                 </h4>
-                <p class="markdownify indent-8">All the Frontend Mentor challenges I have completed.</p>
-                
+                <p class="markdownify indent-8">
+                  All the Frontend Mentor challenges I have completed.
+                </p>
+
                 <h4>
-                  <a href="https://public.tableau.com/app/profile/aziz.prabowo3984/viz/AnalisisJamPostingPalingPopuleruntukMenentukanLokasiPenulisnya/Dashboard1">Analisis Jam Posting Paling Populer untuk Menentukan Lokasi Penulisnya</a>
+                  <a
+                    href="https://public.tableau.com/app/profile/aziz.prabowo3984/viz/AnalisisJamPostingPalingPopuleruntukMenentukanLokasiPenulisnya/Dashboard1"
+                    >Analisis Jam Posting Paling Populer untuk Menentukan Lokasi
+                    Penulisnya</a
+                  >
                 </h4>
-                <p class="markdownify indent-8">Dashboard visualisasi analisis jam posting paling populer terkait konflik Israel-Palestina berdasarkan komentar di postingan Reddit yang diperoleh dari dataset Kaggle: <a href="https://www.kaggle.com/datasets/asaniczka/reddit-on-israel-palestine-daily-updated">Daily Public Opinion on Israel-Palestine War</a>.</p>
+                <p class="markdownify indent-8">
+                  Dashboard visualisasi analisis jam posting paling populer
+                  terkait konflik Israel-Palestina berdasarkan komentar di
+                  postingan Reddit yang diperoleh dari dataset Kaggle:
+                  <a
+                    href="https://www.kaggle.com/datasets/asaniczka/reddit-on-israel-palestine-daily-updated"
+                    >Daily Public Opinion on Israel-Palestine War</a
+                  >.
+                </p>
               </div>
             </div>
           </div>
@@ -288,5 +355,14 @@
         </div>
       </div>
     </main>
+    <footer
+      class="text-sm text-center border-t border-gray-300 dark:border-gray-700 pt-2"
+    >
+      <p class="markdownify">
+        built with <i class="fas fa-solid fa-heart"></i> by
+        <a href="https://showwcase.azizprabowo.social/">me</a> <br />
+        theme by <a href="https://github.com/darshanbaral/aafu">aafu</a>
+      </p>
+    </footer>
   </body>
 </html>
