--- a/home.html
+++ b/home.html
@@ -116,7 +116,7 @@
                   <img
                     class="rounded rounded-full"
                     src="/images/profile.jpg"
-                    alt="Darshan Baral"
+                    alt="Aziz Prabowo"
                     style="max-width: 250px"
                   />
                 </div>
