--- a/index.html
+++ b/index.html
@@ -1,137 +1,365 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en-us" class="m-auto dark">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="5;url=https://www.azizprabowo.social/home.html">
-    <title>azizprabowo.social</title>
-    <style>
-      body {
-        margin: 0px;
-        padding: 0px;
-      }
+    <title>Home</title>
 
-      .container {
-        position: relative;
-	overflow: hidden;
-      }
+    <meta name="theme-color" content="" />
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-      h1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    width: 100%;
-    margin: 0;
-      }
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#252627" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="//fonts.googleapis.com/css?family=Didact+Gothic%7CRoboto:400%7CRoboto+Mono"
+    />
 
-      #dummy {
-        position: absolute;
-        top: 0px;
-        left: 0px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-	<h1>"We are only limited by our own imagination."</h1>
-      <canvas id="canvas">Canvas from: https://codepen.io/prajotsurey/pen/abMZedG</canvas>
-    </div>
+    <link href="/main.css" rel="stylesheet" />
+
     <script>
-      const canvas = document.getElementById("canvas");
-      const ctx = canvas.getContext("2d");
-
-      canvas.height = innerHeight;
-      canvas.width = innerWidth;
-
-      const setSize = () => {
-        canvas.height = innerHeight;
-        canvas.width = innerWidth;
-      };
-
-      const circlesArray = [];
-
-      function generateColor() {
-        return  `hsl(${Math.random()*360},${90}%,${78}%)`
-        // return finalHexString;
+      let html = document.querySelector("html");
+      let theme = window.localStorage.getItem("theme");
+      if (theme) {
+        theme === "dark"
+          ? html.classList.add("dark")
+          : html.classList.remove("dark");
+      } else if (html.classList.contains("dark")) {
+        window.localStorage.setItem("theme", "dark");
+      } else {
+        html.classList.remove("dark");
+        window.localStorage.setItem("theme", "light");
       }
 
-      const center = {
-        x: innerWidth/2,
-        y: innerHeight/2,
-      };
-
-      let frameCount = 0;
-      const maxFrameCount = 350;
-
-      function Circle(x = 0, y = 0, color, radius = Math.random() * 50) {
-        this.radius = radius;
-        this.color = color;
-        this.increament = 0.5;
-        this.x = x;
-        this.y = y;
-        this.chaseX = x;
-        this.deltaX = 0;
-        this.chaseY = y;
-        this.deltaY = 0;
-        this.drag = 0.3;
-        this.acc = 0.05;
-        this.draw = () => {
-          if (Math.round(this.x) != center.x || Math.round(this.y) != center.y ) {
-            this.deltaX += (center.x - this.chaseX) * this.acc;
-            this.deltaY += (center.y - this.chaseY) * this.acc;
-            this.deltaX *= this.drag;
-            this.deltaY *= this.drag;
-            this.chaseX += this.deltaX * ( 1.8 - this.radius /canvas.width * 2);
-            this.chaseY += this.deltaY * ( 1.8 - this.radius /canvas.width * 2);
-            this.x = this.chaseX 
-            this.y = this.chaseY 
-          }
-
-          ctx.beginPath();
-          ctx.fillStyle = this.color;
-          ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2, true);
-          ctx.fill();
-
-          this.radius += this.increament;
-        };
-      }
-      for (let i = 0; i < 5; i++) {
-        circlesArray[i] = new Circle(
-          center.x,
-          center.y,
-          generateColor(),
-          (4 - i) * 200
-        );
-      }
-
-      function draw() {
-        ctx.fillStyle = "rgba(255,255,255,1)";
-        ctx.fillRect(0, 0, innerWidth, innerHeight);
-        if (frameCount == maxFrameCount) {
-          frameCount = 0;
-          circlesArray.push(new Circle(circlesArray[circlesArray.length-1].x, circlesArray[circlesArray.length-1].y, generateColor(), 0));
+      window.onload = () => {
+        let themeToggle = document.querySelector(".theme-toggle");
+        if (window.localStorage.getItem("theme") === "dark") {
+          themeToggle.classList.remove("bi-moon-fill");
+          themeToggle.classList.add("bi-brightness-high");
+        } else {
+          themeToggle.classList.add("bi-moon-fill");
+          themeToggle.classList.remove("bi-brightness-high");
         }
-        frameCount += 1;
-        circlesArray.forEach((circle, index, circles) => {
-          circle.draw();
-          if (circle.radius > canvas.innerWidth * 2) {
-            circles.splice(index, 1);
-          }
-        });
-        window.requestAnimationFrame(draw);
-      }
 
-      window.addEventListener("resize", () => {
-        setSize();
-      });
-      window.addEventListener("mousemove", (e) => {
-        center.x = e.clientX;
-        center.y = e.clientY;
-      });
+        let defaultActivePanel = document.querySelector(".accordion.active");
+        if (defaultActivePanel) {
+          defaultActivePanel.nextElementSibling.style.maxHeight =
+            defaultActivePanel.nextElementSibling.scrollHeight + "px";
+        }
+      };
 
-      draw();
+      window.onresize = () => {
+        let defaultActivePanel = document.querySelector(".accordion.active");
+        if (defaultActivePanel) {
+          defaultActivePanel.nextElementSibling.style.maxHeight =
+            defaultActivePanel.nextElementSibling.scrollHeight + "px";
+        }
+      };
     </script>
+  </head>
+  <body class="h-screen p-2 m-auto max-w-4xl flex flex-col">
+    <header
+      class="nav flex flex-row row py-2 mb-6 w-full border-b border-gray-300 dark:border-gray-700 justify-between"
+    >
+      <div>
+        <a
+          class="no-underline p-2 rounded hover:bg-gray-200 dark:hover:bg-gray-800"
+          href="/home.html"
+          >Home</a
+        >
+        <a
+          class="no-underline p-2 rounded hover:bg-gray-200 dark:hover:bg-gray-800"
+          href="/blog.html"
+          >Blog</a
+        >
+      </div>
+
+      <i
+        class="fas fa-sun theme-toggle text-blue-500 hover:text-blue-700 dark:text-yellow-300 dark:hover:text-yellow-500 cursor-pointer text-lg mr-9 sm:mr-0"
+        onclick="lightDark(this)"
+      ></i>
+    </header>
+
+    <script>
+      const lightDark = (el) => {
+        let html = document.querySelector("html");
+        if (html.classList.contains("dark")) {
+          html.classList.remove("dark");
+          el.classList.add("fa-moon");
+          el.classList.remove("fa-sun");
+          window.localStorage.setItem("theme", "light");
+        } else {
+          html.classList.add("dark");
+          el.classList.add("fa-sun");
+          el.classList.remove("fa-moon");
+          window.localStorage.setItem("theme", "dark");
+        }
+      };
+    </script>
+
+    <main class="grow">
+      <div class="grid grid-cols-1 md:grid-cols-5 gap-2 sm py-2">
+        <div class="col-span-2">
+          <div class="bg-gray-300 dark:bg-darker rounded drop-shadow-md p-2">
+            <div class="flex flex-col justify-center">
+              <div class="">
+                <div class="w-100 h-100 flex justify-center p-4">
+                  <img
+                    class="rounded rounded-full"
+                    src="/images/profile.jpg"
+                    alt="Aziz Prabowo"
+                    style="max-width: 250px"
+                  />
+                </div>
+              </div>
+              <div class="p-2 text-center">
+                <h1 class="mb-0">Aziz Prabowo</h1>
+                <div class="mb-4 flex flex-wrap justify-center">
+                  <div class="mx-2">
+                    <a
+                      class="text-2xl"
+                      href="https://linkedin.com/in/aziz-prabowo/"
+                    >
+                      <i class="mt-1 fab fa-linkedin-in"></i>
+                    </a>
+                  </div>
+
+                  <div class="mx-2">
+                    <a class="text-2xl" href="https://github.com/azizp128/">
+                      <i class="mt-1 fab fa-github"></i>
+                    </a>
+                  </div>
+
+                  <div class="mx-2">
+                    <a
+                      class="text-2xl"
+                      href="https://twitter.com/satemonyet86/"
+                    >
+                      <i class="mt-1 fab fa-twitter"></i>
+                    </a>
+                  </div>
+
+                  <div class="mx-2">
+                    <a
+                      class="text-2xl"
+                      href="https://www.instagram.com/semra.wood/"
+                    >
+                      <i class="mt-1 fab fa-instagram"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-span-3 relative">
+          <div class="px-2">
+            <h2 class="my-0 accordion active">
+              <p
+                class="hover:bg-gray-300 rounded dark:hover:bg-darker m-0 p-2"
+                onclick="expandAccordion(this)"
+                style="cursor: pointer"
+              >
+                <i class="fas fa-user"></i>
+                About Me
+              </p>
+            </h2>
+
+            <div class="panel overflow-hidden px-2 ml-2">
+              <div class="">
+                <p class="markdownify">
+                  A person who loves doing research and experimentation for fun.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="px-2">
+            <h2 class="my-0 accordion">
+              <p
+                class="hover:bg-gray-300 rounded dark:hover:bg-darker m-0 p-2"
+                onclick="expandAccordion(this)"
+                style="cursor: pointer"
+              >
+                <i class="fas fa-book"></i>
+                Publications
+              </p>
+            </h2>
+
+            <div class="panel overflow-hidden px-2 ml-2">
+              <div class="">
+                <h4 style="text-decoration: underline">Journal Articles</h4>
+                <p class="foo indent-8">
+                  2024.
+                  <a
+                    href="https://e-jurnal.stmikbinsa.ac.id/index.php/simkom/article/view/478"
+                  >
+                    <em
+                      >Penerapan Metode Transfer Learning Pada Indobert Untuk
+                      Analisis Sentimen Teks Bahasa Jawa Ngoko Lugu</em
+                    ></a
+                  >, simkom, vol. 9, no. 2, pp. 205-217, Jul. 2024.
+                </p>
+                <p class="foo indent-8"></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="px-2">
+            <h2 class="my-0 accordion">
+              <p
+                class="hover:bg-gray-300 rounded dark:hover:bg-darker m-0 p-2"
+                onclick="expandAccordion(this)"
+                style="cursor: pointer"
+              >
+                <i class="fas fa-project-diagram"></i>
+                Projects
+              </p>
+            </h2>
+
+            <div class="panel overflow-hidden px-2 ml-2">
+              <div class="">
+                <h4>
+                  <a href="https://github.com/azizp128/CTF-exploits"
+                    >CTF Exploits</a
+                  >
+                </h4>
+                <p class="markdownify indent-8">
+                  List of all the Capture The Flag (CTF) exploits and solvers that I wrote for fun.
+                </p>
+
+                <h4>
+                  <a href="https://github.com/azizp128/prediksi-emosi-indobert"
+                    >Prediksi Emosi IndoBERT</a
+                  >
+                </h4>
+                <p class="markdownify indent-8">
+                  Prediksi Emosi App adalah sebuah aplikasi yang dapat digunakan
+                  untuk memprediksi 6 emosi yang muncul dalam sebuah kalimat,
+                  yaitu marah, sedih, senang, cinta, takut, dan jijik.
+                </p>
+
+                <h4>
+                  <a
+                    href="https://github.com/azizp128/analisis-sentimen-bahasa-jawa-indobert"
+                    >Analisis Sentimen Bahasa Jawa IndoBERT</a
+                  >
+                </h4>
+                <p class="markdownify indent-8">
+                  Model analisis sentimen berbasis IndoBERT yang dapat
+                  memprediksi sentimen dalam teks berbahasa Jawa Ngoko Lugu.
+                </p>
+
+                <h4>
+                  <a href="https://github.com/azizp128/Income-Prediction-Flask"
+                    >Income Prediction</a
+                  >
+                </h4>
+                <p class="markdownify indent-8">
+                  A web-based app that utilizes the
+                  AdaBoost machine learning algorithm to predict income based on various
+                  attributes such as age, workclass, education, marital status,
+                  and more. By training on a dataset containing these features,
+                  the model can classify individuals into different income
+                  categories.
+                </p>
+
+                <h4>
+                  <a
+                    href="https://github.com/azizp128/Titanic-Survival-Prediction-Django"
+                    >Titanic Survival Prediction</a
+                  >
+                </h4>
+                <p class="markdownify indent-8">
+                  A web-based app that utilizes the 
+                  Logistic Regression machine learning 
+                  algorithm to predict the survival of passengers aboard the
+                  Titanic. The model is trained on a dataset consisting of
+                  various passenger attributes such as age, gender, ticket
+                  class, and more. By analyzing these features, the model can
+                  make predictions on whether a passenger would have survived or
+                  not.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="px-2">
+            <h2 class="my-0 accordion">
+              <p
+                class="hover:bg-gray-300 rounded dark:hover:bg-darker m-0 p-2"
+                onclick="expandAccordion(this)"
+                style="cursor: pointer"
+              >
+                <i class="fas fa-cogs"></i>
+                Challenges
+              </p>
+            </h2>
+
+            <div class="panel overflow-hidden px-2 ml-2">
+              <div class="">
+                <h4>
+                  <a
+                    href="https://github.com/azizp128/Responsive-Layouts-Final-Challenge"
+                    >Responsive Layouts Final Challenge</a
+                  >
+                </h4>
+                <p class="markdownify indent-8">
+                  This is a solution to the Responsive Layouts Final Challenge
+                  on Kevin Powell Conquering Responsive Layouts Course.
+                </p>
+
+                <h4>
+                  <a
+                    href="https://www.frontendmentor.io/profile/azizp128/solutions"
+                    >Frontend Mentor Web Development Challenges</a
+                  >
+                </h4>
+                <p class="markdownify indent-8">
+                  All the Frontend Mentor challenges I have completed.
+                </p>
+
+                <h4>
+                  <a
+                    href="https://public.tableau.com/app/profile/aziz.prabowo3984/viz/AnalisisJamPostingPalingPopuleruntukMenentukanLokasiPenulisnya/Dashboard1"
+                    >Analisis Jam Posting Paling Populer untuk Menentukan Lokasi
+                    Penulisnya</a
+                  >
+                </h4>
+                <p class="markdownify indent-8">
+                  Dashboard visualisasi analisis jam posting paling populer
+                  terkait konflik Israel-Palestina berdasarkan komentar di
+                  postingan Reddit yang diperoleh dari dataset Kaggle:
+                  <a
+                    href="https://www.kaggle.com/datasets/asaniczka/reddit-on-israel-palestine-daily-updated"
+                    >Daily Public Opinion on Israel-Palestine War</a
+                  >.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <script src="/js/accordion.js"></script>
+        </div>
+      </div>
+    </main>
+    <footer
+      class="text-sm text-center border-t border-gray-300 dark:border-gray-700 pt-2"
+    >
+      <p class="markdownify">
+        built with <i class="fas fa-solid fa-heart"></i> by
+        <a href="https://showwcase.azizprabowo.social/">me</a> <br />
+        theme by <a href="https://github.com/darshanbaral/aafu">aafu</a>
+      </p>
+    </footer>
   </body>
 </html>
