--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div>
         <a
           class="no-underline p-2 rounded hover:bg-gray-200 dark:hover:bg-gray-800"
-          href="/home.html"
+          href="/"
           >Home</a
         >
         <a
