change message & font style

--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,7 @@
     text-align: center;
     width: 100%;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
       }
 
       #dummy {
@@ -35,7 +36,7 @@
   </head>
   <body>
     <div class="container">
-	<h1>coming up</h1>
+	<h1>soon</h1>
       <canvas id="canvas">Canvas from: https://codepen.io/prajotsurey/pen/abMZedG</canvas>
     </div>
     <script>
