--- a/index.html
+++ b/index.html
@@ -243,9 +243,7 @@
                   >
                 </h4>
                 <p class="markdownify indent-8">
-                  Prediksi Emosi App adalah sebuah aplikasi yang dapat digunakan
-                  untuk memprediksi 6 emosi yang muncul dalam sebuah kalimat,
-                  yaitu marah, sedih, senang, cinta, takut, dan jijik.
+                  Model Deep Learning berbasis IndoBERT yang dapat memprediksi 6 jenis emosi dalam suatu kalimat, yaitu marah, sedih, senang, cinta, takut, dan jijik.
                 </p>
 
                 <h4>
@@ -265,12 +263,7 @@
                   >
                 </h4>
                 <p class="markdownify indent-8">
-                  A web-based app that utilizes the
-                  AdaBoost machine learning algorithm to predict income based on various
-                  attributes such as age, workclass, education, marital status,
-                  and more. By training on a dataset containing these features,
-                  the model can classify individuals into different income
-                  categories.
+                  A machine learning model that utilizes the AdaBoost algorithm to predict an employee's income.
                 </p>
 
                 <h4>
@@ -280,14 +273,7 @@
                   >
                 </h4>
                 <p class="markdownify indent-8">
-                  A web-based app that utilizes the 
-                  Logistic Regression machine learning 
-                  algorithm to predict the survival of passengers aboard the
-                  Titanic. The model is trained on a dataset consisting of
-                  various passenger attributes such as age, gender, ticket
-                  class, and more. By analyzing these features, the model can
-                  make predictions on whether a passenger would have survived or
-                  not.
+                  A machine learning model that utilizes the Logistic Regression algorithm to predict the survival of passengers aboard the Titanic.
                 </p>
               </div>
             </div>
@@ -314,7 +300,7 @@
                   >
                 </h4>
                 <p class="markdownify indent-8">
-                  This is a solution to the Responsive Layouts Final Challenge
+                  My solution to the Responsive Layouts Final Challenge
                   on Kevin Powell Conquering Responsive Layouts Course.
                 </p>
 
@@ -338,11 +324,11 @@
                 <p class="markdownify indent-8">
                   Dashboard visualisasi analisis jam posting paling populer
                   terkait konflik Israel-Palestina berdasarkan komentar di
-                  postingan Reddit yang diperoleh dari dataset Kaggle:
+                  postingan Reddit. (Dataset:
                   <a
                     href="https://www.kaggle.com/datasets/asaniczka/reddit-on-israel-palestine-daily-updated"
                     >Daily Public Opinion on Israel-Palestine War</a
-                  >.
+                  >).
                 </p>
               </div>
             </div>
