--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 </h4>
                 <p class="markdownify indent-8">
                   Model analisis sentimen berbasis IndoBERT yang dapat
-                  memprediksi sentimen dalam teks berbahasa Jawa Ngoko Lugu.
+                  memprediksi sentimen 'positif' atau 'negatif' dalam teks berbahasa Jawa Ngoko Lugu.
                 </p>
 
                 <h4>
