--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     >
       <p class="markdownify">
         built with <i class="fas fa-solid fa-heart"></i> by
-        <a href="https://showwcase.azizprabowo.social/">me</a> <br />
+        <a href="https://linkedin.com/in/aziz-prabowo/">me</a> <br />
         theme by <a href="https://github.com/darshanbaral/aafu">aafu</a>
       </p>
     </footer>
