update profile summary & add link to kaggle profile

--- a/index.html
+++ b/index.html
@@ -140,6 +140,12 @@
                   </div>
 
                   <div class="mx-2">
+                    <a class="text-2xl" href="https://www.kaggle.com/azizp123">
+                      <i class="mt-1 fab fa-kaggle"></i>
+                    </a>
+                  </div>
+
+                  <div class="mx-2">
                     <a
                       class="text-2xl"
                       href="https://twitter.com/satemonyet86/"
@@ -177,7 +183,11 @@
             <div class="panel overflow-hidden px-2 ml-2">
               <div class="">
                 <p class="markdownify">
-                  A person who loves doing research and experimentation for fun.
+                  I’m someone who loves doing research and experimenting just for fun. Everything I’ve built or done has been driven purely by curiosity. I enjoy diving into STEM subjects that help me understand the world from first principles.
+                </p>
+                <p class="markdownify">
+                  Right now, I’m focused on Mathematics and Statistics, but I’m always open to new opportunities and eager to learn beyond those areas. 
+                  So, if you have a tough, challenging STEM-related project and need a volunteer, feel free to reach out—I’m happy to help!
                 </p>
               </div>
             </div>
