--- a/index.html
+++ b/index.html
@@ -239,12 +239,14 @@
             <div class="panel overflow-hidden px-2 ml-2">
               <div class="">
                 <h4>
-                  <a href="https://github.com/azizp128/CTF-exploits"
-                    >CTF Exploits</a
+                  <a
+                    href="https://github.com/azizp128/analisis-sentimen-bahasa-jawa-indobert"
+                    >Analisis Sentimen Bahasa Jawa IndoBERT</a
                   >
                 </h4>
                 <p class="markdownify indent-8">
-                  List of all the Capture The Flag (CTF) exploits and solvers that I wrote for fun.
+                  Model analisis sentimen berbasis IndoBERT yang dapat
+                  memprediksi sentimen 'positif' atau 'negatif' dalam teks berbahasa Jawa Ngoko Lugu.
                 </p>
 
                 <h4>
@@ -257,33 +259,31 @@
                 </p>
 
                 <h4>
-                  <a
-                    href="https://github.com/azizp128/analisis-sentimen-bahasa-jawa-indobert"
-                    >Analisis Sentimen Bahasa Jawa IndoBERT</a
-                  >
-                </h4>
-                <p class="markdownify indent-8">
-                  Model analisis sentimen berbasis IndoBERT yang dapat
-                  memprediksi sentimen 'positif' atau 'negatif' dalam teks berbahasa Jawa Ngoko Lugu.
-                </p>
-
-                <h4>
                   <a href="https://github.com/azizp128/Income-Prediction-Flask"
                     >Income Prediction</a
                   >
                 </h4>
                 <p class="markdownify indent-8">
-                  A machine learning model that utilizes the AdaBoost algorithm to predict an employee's income.
+                  An experiment with machine learning model deployment using the Flask framework on Heroku. This project features a simple machine learning model that utilizes the AdaBoost algorithm to predict an employee's income.
                 </p>
-
+                
                 <h4>
                   <a
-                    href="https://github.com/azizp128/Titanic-Survival-Prediction-Django"
-                    >Titanic Survival Prediction</a
+                  href="https://github.com/azizp128/Titanic-Survival-Prediction-Django"
+                  >Titanic Survival Prediction</a
                   >
                 </h4>
                 <p class="markdownify indent-8">
-                  A machine learning model that utilizes the Logistic Regression algorithm to predict the survival of passengers aboard the Titanic.
+                  An experiment with machine learning model deployment using the Django framework on Heroku. This project features a simple machine learning model that utilizes the Logistic Regression algorithm to predict the survival of passengers aboard the Titanic.
+                </p>
+
+                <h4>
+                  <a href="https://github.com/azizp128/CTF-exploits"
+                    >CTF Exploits</a
+                  >
+                </h4>
+                <p class="markdownify indent-8">
+                  List of all the Capture The Flag (CTF) exploits and solvers that I wrote for fun.
                 </p>
               </div>
             </div>
@@ -305,6 +305,23 @@
               <div class="">
                 <h4>
                   <a
+                    href="https://public.tableau.com/app/profile/aziz.prabowo3984/viz/AnalisisJamPostingPalingPopuleruntukMenentukanLokasiPenulisnya/Dashboard1"
+                    >Analisis Jam Posting Paling Populer untuk Menentukan Lokasi
+                    Penulisnya</a
+                  >
+                </h4>
+                <p class="markdownify indent-8">
+                  Dashboard visualisasi analisis jam posting paling populer
+                  terkait konflik Israel-Palestina berdasarkan komentar di
+                  postingan Reddit. (Dataset:
+                  <a
+                    href="https://www.kaggle.com/datasets/asaniczka/reddit-on-israel-palestine-daily-updated"
+                    >Daily Public Opinion on Israel-Palestine War</a
+                  >).
+                </p>
+
+                <h4>
+                  <a
                     href="https://github.com/azizp128/Responsive-Layouts-Final-Challenge"
                     >Responsive Layouts Final Challenge</a
                   >
@@ -322,23 +339,6 @@
                 </h4>
                 <p class="markdownify indent-8">
                   All the Frontend Mentor challenges I have completed.
-                </p>
-
-                <h4>
-                  <a
-                    href="https://public.tableau.com/app/profile/aziz.prabowo3984/viz/AnalisisJamPostingPalingPopuleruntukMenentukanLokasiPenulisnya/Dashboard1"
-                    >Analisis Jam Posting Paling Populer untuk Menentukan Lokasi
-                    Penulisnya</a
-                  >
-                </h4>
-                <p class="markdownify indent-8">
-                  Dashboard visualisasi analisis jam posting paling populer
-                  terkait konflik Israel-Palestina berdasarkan komentar di
-                  postingan Reddit. (Dataset:
-                  <a
-                    href="https://www.kaggle.com/datasets/asaniczka/reddit-on-israel-palestine-daily-updated"
-                    >Daily Public Opinion on Israel-Palestine War</a
-                  >).
                 </p>
               </div>
             </div>
