--- a/index.html
+++ b/index.html
@@ -240,6 +240,23 @@
               <div class="">
                 <h4>
                   <a
+                    href="https://blog.azizprabowo.social/data-science/analisis-waktu-posting-paling-populer-di-reddit-terkait-konflik-israel-palestina"
+                    >Analisis Jam Posting Paling Populer untuk Menentukan Lokasi
+                    Penulisnya</a
+                  >
+                </h4>
+                <p class="markdownify indent-8">
+                  Analisis jam posting paling populer
+                  terkait konflik Israel-Palestina berdasarkan komentar di
+                  postingan Reddit untuk menentukan lokasi penulisnya. (Dataset:
+                  <a
+                    href="https://www.kaggle.com/datasets/asaniczka/reddit-on-israel-palestine-daily-updated"
+                    >Daily Public Opinion on Israel-Palestine War</a
+                  >).
+                </p>
+
+                <h4>
+                  <a
                     href="https://github.com/azizp128/analisis-sentimen-bahasa-jawa-indobert"
                     >Analisis Sentimen Bahasa Jawa IndoBERT</a
                   >
@@ -277,14 +294,7 @@
                   An experiment with machine learning model deployment using the Django framework on Heroku. This project features a simple machine learning model that utilizes the Logistic Regression algorithm to predict the survival of passengers aboard the Titanic.
                 </p>
 
-                <h4>
-                  <a href="https://github.com/azizp128/CTF-exploits"
-                    >CTF Exploits</a
-                  >
-                </h4>
-                <p class="markdownify indent-8">
-                  List of all the Capture The Flag (CTF) exploits and solvers that I wrote for fun.
-                </p>
+                
               </div>
             </div>
           </div>
@@ -304,22 +314,13 @@
             <div class="panel overflow-hidden px-2 ml-2">
               <div class="">
                 <h4>
-                  <a
-                    href="https://public.tableau.com/app/profile/aziz.prabowo3984/viz/AnalisisJamPostingPalingPopuleruntukMenentukanLokasiPenulisnya/Dashboard1"
-                    >Analisis Jam Posting Paling Populer untuk Menentukan Lokasi
-                    Penulisnya</a
+                  <a href="https://github.com/azizp128/CTF-exploits"
+                    >CTF Exploits</a
                   >
                 </h4>
                 <p class="markdownify indent-8">
-                  Dashboard visualisasi analisis jam posting paling populer
-                  terkait konflik Israel-Palestina berdasarkan komentar di
-                  postingan Reddit. (Dataset:
-                  <a
-                    href="https://www.kaggle.com/datasets/asaniczka/reddit-on-israel-palestine-daily-updated"
-                    >Daily Public Opinion on Israel-Palestine War</a
-                  >).
+                  List of all the Capture The Flag (CTF) exploits and solvers that I wrote for fun.
                 </p>
-
                 <h4>
                   <a
                     href="https://github.com/azizp128/Responsive-Layouts-Final-Challenge"
