--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
               <div class="">
                 <h4>
                   <a href="https://github.com/azizp128/CTF-exploits"
-                    >CTF Exploits</a
+                    >CTF Solvers</a
                   >
                 </h4>
                 <p class="markdownify indent-8">
