--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@
                 </div>
               </div>
               <div class="p-2 text-center">
-                <h1 class="mb-0">Aziz Prabowo</h1>
+                <h1 class="mb-3">Aziz Prabowo</h1>
+                <h6>Mathematics | Statistics | Data Science</h6>
+                <h6>Reverse Engineering | Physics</h6>
+                <br>
                 <div class="mb-4 flex flex-wrap justify-center">
                   <div class="mx-2">
                     <a
@@ -183,11 +186,10 @@
             <div class="panel overflow-hidden px-2 ml-2">
               <div class="">
                 <p class="markdownify">
-                  I’m someone who loves doing research and experimenting just for fun. Everything I’ve built or done has been driven purely by curiosity. I enjoy diving into STEM subjects that help me understand the world from first principles.
+                  I'm someone who loves exploring and experimenting just for fun. Mostly, I spend my time working on Math and Stats, and applying them to Data Science.
                 </p>
                 <p class="markdownify">
-                  Right now, I’m focused on Mathematics and Statistics, but I’m always open to new opportunities and eager to learn beyond those areas. 
-                  So, if you have a tough, challenging STEM-related project and need a volunteer, feel free to reach out—I’m happy to help!
+                  Besides that, I also enjoy Reverse Engineering as a hobby, and studying Physics to understand how things work from first principles.
                 </p>
               </div>
             </div>
