--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <div class="panel overflow-hidden px-2 ml-2">
               <div class="">
                 <p class="markdownify">
-                  I'm someone who loves exploring and experimenting just for fun. Mostly, I spend my time working on Math and Stats, and applying them to Data Science.
+                  I'm someone who loves exploring and experimenting just for fun. Mostly, I spend my time working on Maths and Stats, and applying them to Data Science.
                 </p>
                 <p class="markdownify">
                   Besides that, I also enjoy Reverse Engineering as a hobby, and studying Physics to understand how things work from first principles.
