--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                   >
                 </h4>
                 <p class="markdownify indent-8">
-                  An experiment with machine learning model deployment using the Flask framework on Heroku. This project features a simple machine learning model that utilizes the AdaBoost algorithm to predict an employee's income.
+                  An experiment with machine learning model deployment using the Flask framework on Heroku & Streamlit. This project features a simple machine learning model that utilizes the Gradient Boosting Classifier algorithm to predict an employee's income.
                 </p>
                 
                 <h4>
