--- a/index.html
+++ b/index.html
@@ -241,22 +241,13 @@
             <div class="panel overflow-hidden px-2 ml-2">
               <div class="">
                 <h4>
-                  <a
-                    href="https://blog.azizprabowo.social/data-science/analisis-waktu-posting-paling-populer-di-reddit-terkait-konflik-israel-palestina"
-                    >Analisis Jam Posting Paling Populer untuk Menentukan Lokasi
-                    Penulisnya</a
+                  <a href="https://github.com/azizp128/data-science-projects?tab=readme-ov-file#data-analysis"
+                    >Data Analysis Projects</a
                   >
                 </h4>
                 <p class="markdownify indent-8">
-                  Analisis jam posting paling populer
-                  terkait konflik Israel-Palestina berdasarkan komentar di
-                  postingan Reddit untuk menentukan lokasi penulisnya. (Dataset:
-                  <a
-                    href="https://www.kaggle.com/datasets/asaniczka/reddit-on-israel-palestine-daily-updated"
-                    >Daily Public Opinion on Israel-Palestine War</a
-                  >).
+                  List of all Data Analysis projects I have worked on (and published).
                 </p>
-
                 <h4>
                   <a
                     href="https://github.com/azizp128/analisis-sentimen-bahasa-jawa-indobert"
@@ -267,7 +258,6 @@
                   Model analisis sentimen berbasis IndoBERT yang dapat
                   memprediksi sentimen 'positif' atau 'negatif' dalam teks berbahasa Jawa Ngoko Lugu.
                 </p>
-
                 <h4>
                   <a href="https://github.com/azizp128/prediksi-emosi-indobert"
                     >Prediksi Emosi IndoBERT</a
@@ -276,7 +266,6 @@
                 <p class="markdownify indent-8">
                   Model Deep Learning berbasis IndoBERT yang dapat memprediksi 6 jenis emosi dalam suatu kalimat, yaitu marah, sedih, senang, cinta, takut, dan jijik.
                 </p>
-
                 <h4>
                   <a href="https://github.com/azizp128/Income-Prediction-Flask"
                     >Income Prediction</a
@@ -341,7 +330,17 @@
                   >
                 </h4>
                 <p class="markdownify indent-8">
-                  All the Frontend Mentor challenges I have completed.
+                  List of all the Frontend Mentor challenges I have completed.
+                </p>
+
+                <h4>
+                  <a
+                    href="https://leetcode.com/u/azizp128/"
+                    >LeetCode Problems</a
+                  >
+                </h4>
+                <p class="markdownify indent-8">
+                  List of all the LeetCode problems I have solved.
                 </p>
               </div>
             </div>
