--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         >
         <a
           class="no-underline p-2 rounded hover:bg-gray-200 dark:hover:bg-gray-800"
-          href="https://blog.azizprabowo.social/"
+          href="https://blog.azizprabowo.com/"
           >Blog</a
         >
       </div>
