--- a/index.html
+++ b/index.html
@@ -186,10 +186,13 @@
             <div class="panel overflow-hidden px-2 ml-2">
               <div class="">
                 <p class="markdownify">
-                  I'm someone who loves exploring and experimenting just for fun. Mostly, I spend my time working on Maths and Stats, and applying them to Data Science.
+                  I'm someone who loves exploring and experimenting just for fun. Mostly, I spend my time working on <a href="https://www.mathsisfun.com/">Maths</a> and <a href="https://saylordotorg.github.io/text_introductory-statistics/index.html">Stats</a>, and applying them to <a href="https://roadmap.sh/ai-data-scientist">Data Science</a>. Beyond that, I also enjoy <a href="https://beginners.re/">Reverse Engineering</a> as a hobby, and studying <a href="https://physicsisbeautiful.com/">Physics</a> to understand how things work from first principles.
                 </p>
                 <p class="markdownify">
-                  Besides that, I also enjoy Reverse Engineering as a hobby, and studying Physics to understand how things work from first principles.
+                  But life is not always about work, and sometimes we get stuck, right? That's where playing <a href="https://www.retrogames.onl/">video games</a>, watching <a href="https://www.imdb.com/chart/top/">movies</a>, or reading <a href="https://www.goodreads.com/genres/history">history</a> or <a href="https://www.goodreads.com/genres/philisophy">philosophy</a> books comes to my rescue.
+                </p>
+                <p class="markdownify">
+                  But <a href="https://www.goodreads.com/book/show/36071.First_Things_First">first things first</a>, first of all, and most of all, I'm doing it for <a href="https://en.wikipedia.org/wiki/Fun">fun</a>.
                 </p>
               </div>
             </div>
