--- a/index.html
+++ b/index.html
@@ -238,12 +238,20 @@
             <div class="panel overflow-hidden px-2 ml-2">
               <div class="">
                 <h4>
-                  <a href="https://github.com/azizp128/data-science-projects?tab=readme-ov-file#data-analysis"
+                  <a href="https://data-science-projects.streamlit.app/?category=Data+Analysis"
                     >Data Analysis Projects</a
                   >
                 </h4>
                 <p class="markdownify indent-8">
                   List of all Data Analysis projects I have worked on (and published).
+                </p>
+                <h4>
+                  <a href="https://data-science-projects.streamlit.app/?category=Machine+Learning"
+                    >Machine Learning Projects</a
+                  >
+                </h4>
+                <p class="markdownify indent-8">
+                  List of all Machine Learning projects I have worked on (and published).
                 </p>
                 <h4>
                   <a
@@ -263,25 +271,6 @@
                 <p class="markdownify indent-8">
                   Model Deep Learning berbasis IndoBERT yang dapat memprediksi 6 jenis emosi dalam suatu kalimat, yaitu marah, sedih, senang, cinta, takut, dan jijik.
                 </p>
-                <h4>
-                  <a href="https://github.com/azizp128/Income-Prediction-Flask"
-                    >Income Prediction</a
-                  >
-                </h4>
-                <p class="markdownify indent-8">
-                  An experiment with machine learning model deployment using the Flask framework on Heroku & Streamlit. This project features a simple machine learning model that utilizes the Gradient Boosting Classifier algorithm to predict an employee's income.
-                </p>
-                
-                <h4>
-                  <a
-                  href="https://github.com/azizp128/Titanic-Survival-Prediction-Django"
-                  >Titanic Survival Prediction</a
-                  >
-                </h4>
-                <p class="markdownify indent-8">
-                  An experiment with machine learning model deployment using the Django framework on Heroku. This project features a simple machine learning model that utilizes the Logistic Regression algorithm to predict the survival of passengers aboard the Titanic.
-                </p>
-
                 
               </div>
             </div>
