--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <div class="panel overflow-hidden px-2 ml-2">
               <div class="">
                 <h4>
-                  <a href="https://data-science-projects.streamlit.app/?category=Data+Analysis"
+                  <a href="https://github.com/azizp128/data-science-projects?tab=readme-ov-file#data-analysis"
                     >Data Analysis Projects</a
                   >
                 </h4>
@@ -246,7 +246,7 @@
                   List of all Data Analysis projects I have worked on (and published).
                 </p>
                 <h4>
-                  <a href="https://data-science-projects.streamlit.app/?category=Machine+Learning"
+                  <a href="https://github.com/azizp128/data-science-projects?tab=readme-ov-file#machine-learning--deep-learning"
                     >Machine Learning Projects</a
                   >
                 </h4>
