--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                   <div class="mx-2">
                     <a
                       class="text-2xl"
-                      href="https://twitter.com/satemonyet86/"
+                      href="https://twitter.com/azizp128/"
                     >
                       <i class="mt-1 fab fa-twitter"></i>
                     </a>
@@ -160,7 +160,7 @@
                   <div class="mx-2">
                     <a
                       class="text-2xl"
-                      href="https://www.instagram.com/semra.wood/"
+                      href="https://www.instagram.com/azizp128/"
                     >
                       <i class="mt-1 fab fa-instagram"></i>
                     </a>
