--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <div class="panel overflow-hidden px-2 ml-2">
               <div class="">
                 <p class="markdownify">
-                  I'm someone who loves exploring and experimenting just for fun. Mostly, I spend my time working on <a href="https://www.mathsisfun.com/">Maths</a> and <a href="https://saylordotorg.github.io/text_introductory-statistics/index.html">Stats</a>, and applying them to <a href="https://roadmap.sh/ai-data-scientist">Data Science</a>. Beyond that, I do <a href="https://beginners.re/">Reverse Engineering</a> as a hobby, and learning <a href="https://www.feynmanlectures.caltech.edu/">Physics</a> to understand how things work from first principles.
+                  I love exploring and experimenting just for the fun of it. Most of my time goes into working with <a href="https://www.mathsisfun.com/">Maths</a> and <a href="https://saylordotorg.github.io/text_introductory-statistics/index.html">Stats</a>, especially applying them to <a href="https://roadmap.sh/ai-data-scientist">Data Science</a>. Beyond that, I dive into <a href="https://beginners.re/">Reverse Engineering</a> and <a href="https://www.feynmanlectures.caltech.edu/">Physics</a> to understand how things work from first principles.
                 </p>
               </div>
             </div>
